# azdevops-py-tui

./: README.md  pyproject.toml  requirements.txt
src/: azdevops.py  main.py
