[tool.poetry]
name = "azdevops-py-tui"
version = "0.1.0"
description = ""
authors = ["Daniel Steman <daniel-steman@live.nl>"]
readme = "README.md"
packages = [{include = "azdevops_py_tui"}]

[tool.poetry.dependencies]
python = "^3.10"
azure-devops = "^7.1.0b3"
python-dotenv = "^1.0.0"
gitpython = "^3.1.32"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
